[package]
name = "coi-actix-web"
version = "0.5.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-actix-web"
description = "coi-actix-web provides integration support between coi and actix-web"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "*" # Whatever matches with actix-web
actix-web = "2.0"
actix-service = "*" # Whatever matches with actix-web
coi = "0.9.1"
futures = "0.3.4"
log = "0.4.8"
coi-actix-web-derive = { path = "coi-actix-web-derive", version = "0.2.0" }

[features]
default = []
debug = ["coi/debug"]

[dev-dependencies]
actix-rt = "1.0"
