[package]
name = "coi-actix-web-derive"
version = "0.2.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-actix-web"
description = "Provides derives for coi-actix-web"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
actix-web = "2.0"
coi = { version = "0.9.1" }
coi-actix-web = { path = ".." }
