[package]
name = "readme-test"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-actix-web"
publish = false

[workspace]

[dependencies]
doc-comment = "0.3.1"

[dev-dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
coi-actix-web = { path = ".." }
coi = "0.8.0"
futures = "0.3.4"
serde = "1.0.104"

[patch.crates-io]
coi = { path = "../../coi", version = "0.8.0" }