[package]
name = "readme-test"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-actix-web"
publish = false

[workspace]

[dependencies]
doc-comment = "0.3.2"

[dev-dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
coi-actix-web = { path = ".." }
coi = "0.10.0"
futures = "0.3.25"
serde = { version = "1.0.104", features = ["derive"] }
